// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlFormatEditor should render label template help 1`] = `
<Fragment>
  <LabelTemplateFlyout
    isVisible={true}
    onClose={[Function]}
  />
  <UrlTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Type"
        id="datasetManagement.url.typeLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedSelect
      data-test-subj="urlEditorType"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="URL template help"
          id="datasetManagement.url.template.helpLinkText"
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="URL template"
        id="datasetManagement.url.urlTemplateLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      data-test-subj="urlEditorUrlTemplate"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Label template help"
          id="datasetManagement.url.labelTemplateHelpText"
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Label template"
        id="datasetManagement.url.labelTemplateLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      data-test-subj="urlEditorLabelTemplate"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <FormatEditorSamples
    sampleType="html"
    samples={Array []}
  />
</Fragment>
`;

exports[`UrlFormatEditor should render normally 1`] = `
<Fragment>
  <LabelTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <UrlTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Type"
        id="datasetManagement.url.typeLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedSelect
      data-test-subj="urlEditorType"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="URL template help"
          id="datasetManagement.url.template.helpLinkText"
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="URL template"
        id="datasetManagement.url.urlTemplateLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      data-test-subj="urlEditorUrlTemplate"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Label template help"
          id="datasetManagement.url.labelTemplateHelpText"
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Label template"
        id="datasetManagement.url.labelTemplateLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      data-test-subj="urlEditorLabelTemplate"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <FormatEditorSamples
    sampleType="html"
    samples={Array []}
  />
</Fragment>
`;

exports[`UrlFormatEditor should render url template help 1`] = `
<Fragment>
  <LabelTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <UrlTemplateFlyout
    isVisible={true}
    onClose={[Function]}
  />
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Type"
        id="datasetManagement.url.typeLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedSelect
      data-test-subj="urlEditorType"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="URL template help"
          id="datasetManagement.url.template.helpLinkText"
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="URL template"
        id="datasetManagement.url.urlTemplateLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      data-test-subj="urlEditorUrlTemplate"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Label template help"
          id="datasetManagement.url.labelTemplateHelpText"
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Label template"
        id="datasetManagement.url.labelTemplateLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      data-test-subj="urlEditorLabelTemplate"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <FormatEditorSamples
    sampleType="html"
    samples={Array []}
  />
</Fragment>
`;

exports[`UrlFormatEditor should render width and height fields if image 1`] = `
<Fragment>
  <LabelTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <UrlTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Type"
        id="datasetManagement.url.typeLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedSelect
      data-test-subj="urlEditorType"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
      value="img"
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="URL template help"
          id="datasetManagement.url.template.helpLinkText"
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="URL template"
        id="datasetManagement.url.urlTemplateLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      data-test-subj="urlEditorUrlTemplate"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Label template help"
          id="datasetManagement.url.labelTemplateHelpText"
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Label template"
        id="datasetManagement.url.labelTemplateLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldText
      data-test-subj="urlEditorLabelTemplate"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Width"
        id="datasetManagement.url.widthLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldNumber
      data-test-subj="urlEditorWidth"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Height"
        id="datasetManagement.url.heightLabel"
      />
    }
    labelType="label"
  >
    <EuiCompressedFieldNumber
      data-test-subj="urlEditorHeight"
      onChange={[Function]}
      value=""
    />
  </EuiCompressedFormRow>
  <FormatEditorSamples
    sampleType="html"
    samples={
      Array [
        Object {
          "input": "go",
          "output": "converted url for go",
        },
        Object {
          "input": "stop",
          "output": "converted url for stop",
        },
        Object {
          "input": Array [
            "de",
            "ne",
            "us",
            "ni",
          ],
          "output": "converted url for de,ne,us,ni",
        },
        Object {
          "input": "cv",
          "output": "converted url for cv",
        },
      ]
    }
  />
</Fragment>
`;
